crates/antlr-rust-runtime/src/atn/snapshots/antlr4_runtime__atn__parser__tests__exact_sll_conflict_skips_full_context_retry.snap
---
source: crates/antlr-rust-runtime/src/atn/parser.rs
expression: prediction
---
ParserAtnPrediction {
    alt: 1,
    requires_full_context: false,
    has_semantic_context: false,
    diagnostic: Some(
        ParserAtnPredictionDiagnostic {
            kind: Ambiguity,
            start_index: 0,
            sll_stop_index: 0,
            ll_stop_index: 0,
            conflicting_alts: [
                1,
                2,
            ],
            exact: true,
        },
    ),
}
